--- a/config/locales/devise.en.yml
+++ b/config/locales/devise.en.yml
@@ -43,8 +43,8 @@ en:
       update_needs_confirmation: "You updated your account successfully, but we need to verify your new email address. Please check your email and follow the confirm link to confirm your new email address."
       updated: "Your account has been updated successfully."
     sessions:
-      signed_in: "Welcome back!"
-      signed_out: "See you soon!"
+      signed_in: "Welcome back! %{current_user.first_name}."
+      signed_out: "See you soon! %{current_user.first_name}."
       already_signed_out: "Signed out successfully."
     unlocks:
       send_instructions: "You will receive an email with instructions for how to unlock your account in a few minutes."
